--- a/recent-papers.qmd
+++ b/recent-papers.qmd
@@ -15,10 +15,12 @@ Society for Cinema & Media Studies Conference, Denver, 12 April 2023.
 
 [Dangerous Liaisons: Nocturnal Cinema and the French New Wave](https://mroberts1.github.io/nocturnal-cinema/)\
 Originally presented as “Nocturnal Cinema: Film Noir, Jazz, and the French New Wave” at the [Media & The Night](https://theurbannight.files.wordpress.com/2022/03/book-of-abstracts.pdf) conference\
-McGill University, 18-19 March 2022. Updated 20 July 2024.
+McGill University, 18-19 March 2022.\
+Updated 20 July 2024.
 
 [Three-Dimensional Music: Cornelius's Animated Soundworlds](https://3d-music.netlify.app/)\
-Japanese Association for the Study of Popular Music (JASPM) conference, Osaka, 7 December 2019. Revised and expanded July 2024.
+Japanese Association for the Study of Popular Music (JASPM) conference, Osaka, 7 December 2019.\
+Revised and expanded July 2024.
 
 [Torrential Noise: 1724 Records and the Asian Post-Rock Soundscape](https://9dream.netlify.app/torrential-noise/)\
 [6th Inter-Asia Popular Music Studies (IAPMS)](https://interasiapop.org/conferences/the-6th-iapms-conference-in-beijing-china-2018/) conference.\
