--- a/emerson.qmd
+++ b/emerson.qmd
@@ -4,3 +4,17 @@ title: "    "
 
 [VM200-2 Media Criticism & Theory](https://mroberts1.github.io/media-criticism-su25)\
 Summer 2025
+
+[VM402-07 Animation: A Global History](https://mroberts1.github.io/global-animation/)\
+Spring 2025
+
+[VM402-10 Movements in World Cinema](https://mroberts1.github.io/movements-world-cinema-fall24/)\
+Fall 2024
+
+[VM303-01 Studies in Digital Media & Culture](https://mroberts.emerson.build/courses/vm-303-01/fa24/)\
+Fall2024
+
+[VM402-05 Cinematic Media: Reinventing Cinema in the Digital Age](https://mroberts1.github.io/cinematic-media-fa23/)\
+Fall 2023
+
+
