--- a/courses.qmd
+++ b/courses.qmd
@@ -19,6 +19,43 @@ Fall2024
 [VM402-05 Cinematic Media: Reinventing Cinema in the Digital Age](https://mroberts1.github.io/cinematic-media-fa23/)\
 Fall 2023
 
+## Fitchburg State University
+
+[COMM 7018 Social Media Theory](https://mroberts1.github.io/fsu-smt-su25/)\
+Summer 2025
+
+[COMM 7007 Social Mobilities](https://mroberts1.github.io/fsu-social-mobilities-fa24/)\
+Fall 2024
+
+[COMM 7018 Social Media Theory](https://mroberts1.github.io/fsu-smt-su24/)\
+Summer 2024
+
+[COMM 7018 Social Media Theory](https://mroberts1.github.io/social-media-theory-summer-2023/)\
+Summer 2023
+
+[COMM 7007 Social Mobilities](https://mroberts1.github.io/social-mobilities-fall-22/)\
+Fall 2022
+
+[COMM 7018 Social Media Theory](https://mroberts1.github.io/social-media-theory-summer-2022/)\
+Summer 2022
+
+[COMM 8021 Integrated Social Media](https://mroberts1.github.io/integrated-social-media-summer-22/)\
+Summer 2022
+
+[COMM 8114 Social Media Marketing](https://mroberts1.github.io/social-media-marketing-summer-2022/)\
+Summer 2022
+
+## Keene State College
+
+[IHFILM-110-01 Robot Stories](https://mroberts1.github.io/robot-stories-sp24/)\
+Spring 2024
+
+[Listening To Movies](https://mroberts1.github.io./soundtracks-fall-2022)
+Fall 2022
+
 ***
+
+
+
 
 
