--- a/articles.qmd
+++ b/articles.qmd
@@ -1,7 +1,15 @@
 ---
-title: "Articles"
+title: "    "
 ---
 
-# Articles
+## Articles
 
-Content coming soon.
+[“‘A New Stereophonic Sound Spectacular’: Shibuya-kei as Transnational Soundscape.”](https://bit.ly/2OPtsIN) *Popular Music* 32, no. 1 (January 2013) 111-123.
+
+[Baraka: World Cinema and the Global Culture Industry.”](https://bit.ly/3eSfOzk) *Cinema Journal* 37, no. 3 (Spring, 1998), 62-82.
+
+“[The Self in the Other: Ethnographic Film, Surrealism, Politics.](http://dokoissho.sdf.org/self-other/self-other.html)” *Visual Anthropology* 8 (1) (1996): 79-94.
+
+“World Music and the Global Cultural Economy.” *Diaspora: a Journal of Transnational Studies* 2 (2) (1992): 229-242.
+
+“Mutations of the Spectacle: *Vitrines*, Arcades, Mannequins.” *French Cultural Studies* (October 1991), 211-49.
