--- a/invited.qmd
+++ b/invited.qmd
@@ -1,7 +1,35 @@
 ---
-title: "Invited Lectures"
+title: "    "
 ---
 
-# Invited Lectures
+## Invited Lectures & Keynotes
 
-Content coming soon.
+Online interview/discussion with Professor Yoshitaka Mouri on my article “‘A New Stereophonic Sound Spectacular’: Shibuya-kei as Transnational Soundscape.” Tokyo University of the Arts (via Zoom), 14 July 2020.
+
+Panel discussant, screening of the documentary film Anthropocene: The Human Epoch. Envisioning the World screening series, Closeup Film Theatre, London, 2019.
+
+“Reboot, Reset, React: Television in the Age of Social Media.” Hallym University, Media School. Chuncheon, South Korea, 18 June 2018.
+
+“‘A New Stereophonic Sound Spectacular’: Shibuya-kei as Transnational Soundscape,” 2013. Centre for Media and Film Studies, SOAS, University of London, 13 November 2013.
+
+“Transnational Documentary: Creative Labour and Cultural Politics.” Hallym University, School of Communication. Chuncheon, South Korea, 20 October 2012.
+
+“Cinema and/as Development.” Korean International Cooperation Agency (KOICA), Master’s Program, Yonsei University. Wonju, South Korea, 21 November 2012.
+
+“Subcultural Studies and the Future of Nostalgia.” Panelist (with Tony Jefferson), panel on the re-publication of Stuart Hall and Tony Jeﬀerson’s Resistance Through Rituals, at “On the Edge: Transgression and the Dangerous Other. An Interdisciplinary Conference,” John Jay College of Criminal Justice, New York, 2007.
+
+“Translation as a Martial Art: Kung Faux, from Détournement to Dubtitling.” Panelist, “Martial Arts/Global Flows” conference, Asian-Pacific Studies Institute, Duke University, 2005.
+
+Discussant (with Jiwon Ahn), Hong Kong Cinema screening series of Stephen Chao’s film Shaolin Soccer. Leslie Center for the Humanities, Dartmouth College, 2005.
+
+“‘El Download es Cultura’: Electronic Music in Latin America,” Panelist, “Critical Worlds I: From Slave Music to World Music” conference, Université de Montréal, 2004.
+
+Keynote respondent, Global Hollywood conference, University of Victoria, Canada, 2001.
+
+“Notes on the Global Underground: Subcultural Elites, Conspicuous Cosmopolitanism.” Keynote panelist, conference on Globalization and Popular Culture, University of Manitoba, 2001.
+
+Discussant, panel on “Portable Cultures, Global Identities,” The Public Theater, New York, on Jessica Hagedorn’s play Dogeaters, 2001.
+
+“World Music: The Relocation of Culture.” Roundtable presenter and participant, John D. and Catherine T. MacArthur Foundation, “Globalization and Creativity,” Chicago, 1996.
+
+“World Music and the Global Cultural Economy.” Panelist, “Producão Cultural: Centro/Periferia?” conference, Universidade Federal de Alagoas, Maceió, Brazil, 1992.
