--- a/papers.qmd
+++ b/papers.qmd
@@ -2,6 +2,8 @@
 title: "    "
 ---
 
+## Online conference papers and articles
+
 [Endless Summer: Transcultural Geographies of City Pop Art](https://mroberts1.github.io/endless-summer/)\
 "And Suddenly There Was City Pop: The Global Dimensions of the Retrograde Formation of a Japanese Popular Music Genre"\
 University of Amsterdam, 19-21 March 2025.
@@ -22,13 +24,34 @@ Updated 20 July 2024.
 Japanese Association for the Study of Popular Music (JASPM) conference, Osaka, 7 December 2019.\
 Revised and expanded July 2024.
 
+[“From the East Village to Shibuya: A Tale of Two Record Stores.”](http://333sound.com/from-the-east-village-to-shibuya-a-tale-of-two-record-stores/)\ 
+*333Sound: Short Books About Albums. Published By Bloomsbury,* 11 March 2020.
+
 [Torrential Noise: 1724 Records and the Asian Post-Rock Soundscape](https://9dream.netlify.app/torrential-noise/)\
 [6th Inter-Asia Popular Music Studies (IAPMS)](https://interasiapop.org/conferences/the-6th-iapms-conference-in-beijing-china-2018/) conference.\
 Communication University of China, Beijing, China, 9-10 June 2018.
 
 [Double Happiness: Hip Hop and the New Asian-American Food Culture](https://9dream.netlify.app/asian-american-food-media/)\
-Originally presented as “From Cookbook to Comic Book: Graphic Media, Hip Hop, and Asian-American Food Culture.”\ *Journal of Intercultural Studies* conference, “Migrating Concepts: Cosmopolitanism, Multiculturalism, and Conviviality Across the Asia Pacific,” Singapore, 23-25 February 2018.
+Originally presented as “From Cookbook to Comic Book: Graphic Media, Hip Hop, and Asian-American Food Culture.” *Journal of Intercultural Studies* conference, “Migrating Concepts: Cosmopolitanism, Multiculturalism, and Conviviality Across the Asia Pacific,” Singapore, 23-25 February 2018.
 
 [‘Imagine’: Performance and Ritual in an Age of Global Insecurity](https://9dream.netlify.app/imagine/)\
 Cultural Typhoon conference.\
 Tokyo University of the Arts, Japan, July 2016.
+
+“[Keyword: Cosmpolitanism.](https://dokoissho.sdf.org/cosmopolitanism/index.html)”\
+*Critical World: Thinking Globalization Through Music* website 2008, Université de Montréal.
+
+[“‘I’m Riding a Panda!’ Japanese Cult Media and Hipster Cosmopolitanism.”](https://www.flowjournal.org/2009/04/im-riding-a-panda-japanese-cult-media-and-hipster-cosmopolitanism-martin-roberts-the-new-school/)\
+*Flow* 9, no. 10 (April 2009). Dept. of Radio-TV-Film, University of Texas, Austin.
+
+[“This Was England: British Television And/As Cultural Heritage.”](https://www.flowjournal.org/2009/01/this-was-england-british-television-andas-cultural-heritage-martin-roberts-the-new-schoo/)\
+*Flow* 9, no. 5 (January 2009). Dept. of Radio-TV-Film, University of Texas, Austin.
+
+[“Another Green World: Lifestyle Television’s Environmental Turn.”](https://www.flowjournal.org/2008/10/another-green-world-lifestyle-television%E2%80%99s-environmental-turn-martin-roberts-the-new-school/)\
+*Flow* 9, no. 1 (October 2008). Dept. of Radio-TV-Film, University of Texas, Austin.
+
+“[The Self in the Other: Ethnographic Film, Surrealism, Politics.](http://dokoissho.sdf.org/self-other/self-other.html)”\
+*Visual Anthropology* 8 (1) (1996): 79-94.
+
+“[Transnational Geographic: Perspectives on *Baraka.*](http://dokoissho.sdf.org/baraka/index.html)”\
+“The Future of Media Studies” conference  Film & Media Studies Program, Massachusetts Institute of Technology, 1995.
