--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,6 @@
 title: "    "
 ---
 
-I am a version of myself.
+[**Martin Roberts**](mailto:martin_roberts@emerson.edu) teaches courses on world cinema, digital culture, and cinematic media in the Department of Visual & Media Arts at Emerson College, Boston. He completed a doctoral dissertation on the contemporary French novelist Michel Tournier at the University of Cambridge, published as **Michel Tournier: Bricolage and Cultural Mythology** by Stanford French & Italian Studies.
+
+His postdoctoral research focused on ethnographic surrealism, but since participating in the launch of the Film & Media Studies program at MIT, his research has focused on global media and culture. His publications on film and media include essays on global documentary, IMAX movies, and the Danish Dogma '95 movement in journals such as *Cinema Journal* and *Visual Anthopology*.
