--- a/contact.qmd
+++ b/contact.qmd
@@ -2,4 +2,4 @@
 title: "    "
 ---
 
-[{{< fa regular envelope >}}](mailto:dokossho@sdf.org) \| [{{< fa brands mastodon >}}](https://merveilles.town/@dokoissho) \| [{{< fa brands github >}}](https://github.com/mroberts1/) \| [{{< fa brands facebook >}}](https://facebook.com/mr05301) \| [{{< fa brands twitter >}}](https://twitter.com/dokoissho)
+[{{< fa regular envelope >}}](mailto:mroberts1@gmail.com) \| [{{< fa brands mastodon >}}](https://merveilles.town/@dokoissho) \| [{{< fa brands github >}}](https://github.com/mroberts1/) \| [{{< fa brands facebook >}}](https://facebook.com/mr05301) \| [{{< fa brands twitter >}}](https://twitter.com/mroberts_vma)
