--- a/conferences.qmd
+++ b/conferences.qmd
@@ -22,7 +22,7 @@ title: "    "
 
 “The Rake’s Progress: Steve Coogan and Celebrity Culture.” Society for Cinema and Media Studies (SCMS) conference, Seattle, 2014.
 
-‘By Pressing Down This Special Key, It Plays A Little Melody’: Videogame Subcultures and Nostalgia for the Future.” Japanese Association for the Study of Popular Music (JASPM). Tokyo, Japan, 24 May 2012.
+“‘By Pressing Down This Special Key, It Plays A Little Melody’: Videogame Subcultures and Nostalgia for the Future.” Japanese Association for the Study of Popular Music (JASPM). Tokyo, Japan, 24 May 2012.
 
 “The Shibuya Eﬀect: Transnational Soundscapes, Transcultural Capital.” Inter-Asia Popular Music conference, Chinese University of Hong Kong, 2010.
 
