--- a/books.qmd
+++ b/books.qmd
@@ -11,7 +11,7 @@ New York: Bloomsbury Academic, 2019. 33 1/3 series.
 
 :::
 
-In Tokyo in the early 1990s, an indie band called Flipper's Guitar was at the forefront of a new wave in Japanese popular music known as Shibuya-kei. The band's founder, Keigo Oyamada, would go on to produce, under the name Cornelius, a series of albums that are among the most innovative in Japanese popular music of the past two decades. Oyamada's third album under his Cornelius alter-ego, Fantasma (1997), played a key role in putting J-pop on the world map for Western music fans, and Oyamada himself is today one of the most respected figures in the Japanese music industry. This book tells the story of Fantasma's emergence from the Shibuya-kei scene and considers the wider impact of Oyamada's work both internationally and on Japanese popular music today.
+In Tokyo in the early 1990s, an indie band called Flipper's Guitar was at the forefront of a new wave in Japanese popular music known as Shibuya-kei. The band's founder, Keigo Oyamada, would go on to produce, under the name Cornelius, a series of albums that are among the most innovative in Japanese popular music of the past two decades. Oyamada's third album under his Cornelius alter-ego, *Fantasma* (1997), played a key role in putting J-pop on the world map for Western music fans, and Oyamada himself is today one of the most respected figures in the Japanese music industry. This book tells the story of Fantasma's emergence from the Shibuya-kei scene and considers the wider impact of Oyamada's work both internationally and on Japanese popular music today.
 
 ***
 
